THRIFT-2793 Go compiler produces uncompilable code Client: Go Pacth: Frank Schroeder